Fix scrollbar glitch

--- a/css/projects/_project.scss
+++ b/css/projects/_project.scss
@@ -172,3 +172,7 @@
 	}
 }
 
+.section-full-bleed {
+	overflow:hidden;
+}
+
